# mcp-security-scanner

./: .gitignore  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  go.mod  pyproject.toml  requirements.txt
.github/workflows/: mcp-scan.yaml
cli/: main.py
pkg/: __init__.py
pkg/models/: __init__.py  scan.py
pkg/reports/: __init__.py  formatter.py
pkg/rules/: __init__.py  auth_gaps.go  builtin.py  excessive_permissions.go  path_traversal.go  prompt_injection.go  rules.go  rules_test.go  secrets_exposure.go
pkg/sarif/: sarif.go
pkg/scanner/: __init__.py  analyzer.py  scanner.go  scanner_test.go
tests/: conftest.py  test_analyzer.py  test_models.py  test_rules.py
